@@ -278,19 +278,40 @@ class Demo: # stateful class for doing effective demonstrations
          cmd.zoom("1tii")
          cmd.spectrum("count","rainbow","1tii")
          cmd.set("suspend_updates",0,quiet=1)
-         cmd.set("cartoon_highlight_color","grey70","1tii")
+         cmd.set("cartoon_highlight_color","grey50","1tii")
          cmd.set("cartoon_fancy_helices",1,"1tii")
          cmd.refresh()
       else:
          cmd.delete("1tii")
 
+   def elec(self,cleanup=0):
+      if not cleanup:
+         cmd.disable()
+         cmd.delete("pept")
+         cmd.delete("e_pot")
+         cmd.delete("e_lvl")
+         cmd.load("$PYMOL_PATH/test/dat/pept.pkl")
+         cmd.hide("(pept)")
+         cmd.show("surface","pept")
+         cmd.set("coulomb_dielectric",80.0)
+         cmd.map_new("e_pot","coulomb",1.0,"pept",5)
+         cmd.ramp_new("e_lvl","e_pot",[-3.6,-1.6,0.4])
+         cmd.set("surface_color","e_lvl","pept")
+         cmd.wizard("message","CTRL-Middle-Click on color bar to change levels...")
+         cmd.refresh()
+      else:
+         cmd.delete("pept")
+         cmd.delete("e_pot")
+         cmd.delete("e_lvl")
+         cmd.set_wizard()
+         
    def trans(self,cleanup=0):
       if not cleanup:
          cmd.set("suspend_updates",1,quiet=1)
          cmd.disable()
          cmd.delete("trans")
          cmd.load("$PYMOL_PATH/test/dat/pept.pdb","trans")
-         cmd.hide("(tran)")
+         cmd.hide("(trans)")
          cmd.show("surface","trans")
          cmd.show("sticks","trans")
          cmd.set("surface_color","white","trans")
@@ -332,9 +353,10 @@ class Demo: # stateful class for doing effective demonstrations
          cmd.show("spheres","sculpt")
          cmd.set("sphere_transparency","0.75","sculpt")
          cmd.set("sphere_color","grey","sculpt")
-         cmd.sculpt_activate("sculpt")
+         cmd.frame(1)
          cmd.set("auto_sculpt",1)
          cmd.set("sculpting",1)
+         cmd.sculpt_activate("sculpt")
          cmd.do("edit_mode")
          cmd.set("valence","0.05")
          cmd.set("suspend_updates",0,quiet=0)
